# AlmaGlobalChallenge

./: README.md  main.py  pyproject.toml
client/: ClientFinanceValues.py  ClientMetrics.py  RatesService.py  TaskHandler.py
job/: TaskHandler.py
pruebas/: conectando_a_la_api.py
service/: RatesService.py  ServiceTicker.py  __init__.py
tests/: test_implicit_rate.py
utils/: MiscFunctions.py  config.json  config_2.json
