[tool.poetry]
name = "almaglobla"
version = "0.1.0"
description = ""
authors = ["LucianoArgolo22 <Lucianorayos1@gmail.com>"]
readme = "README.md"
packages = [{include = "scrapper_service"}]

[tool.poetry.dependencies]
python = ">=3.8,<4"
requests = "^2.28.1"
yfinance = "^0.1.87"


[tool.poetry.dev-dependencies]
ipykernel = "^6.19.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
